_/data/documentations/numpy/numpy/typing/tests/data/pass/literal_py.comment
['text':' i.e. np.ufunc.__call__','line_number':34,'multiline':False]