_/data/documentations/numpy/numpy/typing/tests/data/fail/twodim_base_pyi.comment
['text':' E: No overload variant','line_number':20,'multiline':False]['text':' E: No overload variant','line_number':21,'multiline':False]['text':' E: No overload variant','line_number':23,'multiline':False]['text':' E: No overload variant','line_number':24,'multiline':False]['text':' E: No overload variant','line_number':26,'multiline':False]['text':' E: No overload variant','line_number':27,'multiline':False]['text':' E: No overload variant','line_number':29,'multiline':False]['text':' E: No overload variant','line_number':30,'multiline':False]['text':' E: incompatible type','line_number':32,'multiline':False]['text':' E: No overload variant','line_number':34,'multiline':False]['text':' E: incompatible type','line_number':36,'multiline':False]['text':' E: incompatible type','line_number':37,'multiline':False]